<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sleep Guard</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profiles</string>
    <string name="action_clear_setting">Clear Setting</string>
    <string name="action_clear_profile">Clear Profiles</string>
    <string name="title_activity_new_profile">New Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_diagnosis_manager">Diagnosis Manager</string>
    <string name="title_activity_help_desk">Manual</string>
    <string name="title_activity_android_explorer">File Selector</string>
    <string name="title_activity_scheduler">Diagnosis Detail</string>
    <string name="title_activity_setting">Setting</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_close">Close</string>

    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_e_mail">E-mail</string>
    <string name="text_middle_name">Middle Name</string>
    <string name="text_prefix">Prefix</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_phone_extension">Phone Extension</string>
    <string name="text_scheduling_date">Create Date</string>
    <string name="text_dummy">John Smith</string>


    <string name="text_diagnosis_status">Diagnosis Status</string>

    <string name="hello_world">Hello newbie!</string>

    <string-array name="diagnosis_states">
        <item>Waiting for Configuration</item>
        <item>Audio File Not Found</item>
        <item>Bad Recording</item>
        <item>Ready to Generate Result</item>
        <item>Result Available</item>
        <item>Successfully Finished</item>
    </string-array>
</resources>
