<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mm90849491.sleepguard.EditProfile"
    android:padding="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:id="@+id/btnCancel"
        android:background="@color/primary"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textSize="@dimen/abc_text_size_large_material"
        android:clickable="true"
        android:layout_alignTop="@+id/btnSave"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_alignStart="@+id/scrollView"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:onClick="onClickCancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/btnSave"
        android:background="@color/primary"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textSize="@dimen/abc_text_size_large_material"
        android:paddingLeft="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:paddingRight="72dp"
        android:clickable="true"
        android:onClick="onClickSave" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/btnCancel"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_first_name"
                android:ems="10"
                android:id="@+id/etxtFirstName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:inputType="textPersonName" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/text_last_name"
                android:ems="10"
                android:id="@+id/etxtLastName"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etxtMiddleName"
                android:layout_alignParentLeft="true"
                android:phoneNumber="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etxtEmail"
                android:text="@string/text_e_mail"
                android:layout_below="@+id/etxtPrefix"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etxtMiddleName"
                android:text="@string/text_middle_name"
                android:layout_below="@+id/etxtFirstName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etxtPhoneNumber"
                android:text="@string/text_phone_number"
                android:layout_below="@+id/etxtEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etxtPhoneExtension"
                android:text="@string/text_phone_extension"
                android:layout_below="@+id/etxtPhoneNumber"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etxtPrefix"
                android:text="@string/text_prefix"
                android:layout_below="@+id/etxtLastName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
